# ferelight

./: .openapi-generator-ignore  Dockerfile  README.md  openapi.yaml  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: publish-docker.yml  publish.yml
.openapi-generator/: FILES
ferelight/: __init__.py  __main__.py
ferelight/controllers/: default_controller.py
ferelight/models/: __init__.py  querybyexample.py  querybyexample_database_post_request.py  segmentbytime.py  segmentbytime_database_post200_response.py  segmentbytime_database_post_request.py
ferelight/openapi/: openapi.yaml
